--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">EmsiApp</string>
     <string name="register_text">Don\'t have an account? Register</string>
     <string name="login_text">Press to Logn in </string>
+    <string name="google_maps_key">AIzaSyCaKXfJvFAPaFTx5grVWvvtoWvkQxjQZlU</string>
+
 </resources>
