--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="register_text">Don\'t have an account? Register</string>
     <string name="login_text">Press to Logn in </string>
     <string name="google_maps_key">AIzaSyCaKXfJvFAPaFTx5grVWvvtoWvkQxjQZlU</string>
-
+    <string name="map_description">Carte montrant les sites EMSI et votre position actuelle</string>
 </resources>
